--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon bin/run ",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +25,10 @@
     "koa-static-cache": "^5.1.1",
     "koa-mysql-session": "^0.0.2",
     "koa-session-minimal": "^3.0.4",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "runkoa": "^1.3.1",
+    "cross-env": "^5.1.1",
+    "tracer": "latest"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
