--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "moment": "^2.18.1",
+    "qiniu": "^7.1.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "think-cache": "^1.0.0",
